--- a/package.json
+++ b/package.json
@@ -113,8 +113,6 @@
     "fs-extra": "^0.30.0",
     "geopattern": "^1.2.3",
     "get-form-data": "1.2.2",
-    "geopattern": "^1.2.3",
-    "get-form-data": "1.2.2",
     "gulp": "^3.9.1",
     "gulp-add-src": "0.2.0",
     "gulp-concat-css": "2.2.0",
@@ -154,6 +152,7 @@
     "passport-local-mongoose": "~0.2.4",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
+    "react-refetch": "^1.0.0-beta.10",
     "react-remarkable": "^1.1.1",
     "react-router": "^2.6.1",
     "removed": "0.0.5",
@@ -229,7 +228,10 @@
     },
     "rules": {
       "strict": 0,
-      "arrow-parens": [2, "always"],
+      "arrow-parens": [
+        2,
+        "always"
+      ],
       "import/no-extraneous-dependencies": 0,
       "import/no-unassigned-import": 0,
       "import/order": [
@@ -285,6 +287,6 @@
     }
   },
   "browser": {
-    "lib/config" : "lib/config/config"
+    "lib/config": "lib/config/config"
   }
 }
